# Extracting-MFI-Using-CLM

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: combination.h  edge.h  node.h
src/: ui.cpp
